update cache