@@ -5,7 +5,6 @@ import lombok.RequiredArgsConstructor;
 
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -13,15 +12,18 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public enum Role {
 
-  MEMBER(Collections.emptySet()),
-  ADMIN(
-          Set.of(
-                  Permission.ADMIN_READ,
-                  Permission.ADMIN_UPDATE,
-                  Permission.ADMIN_DELETE,
-                  Permission.ADMIN_CREATE
-          )
-  );
+	 USER(Set.of(
+		        Permission.USER_READ,
+		        Permission.USER_UPDATE
+		    )),
+		    ADMIN(Set.of(
+		        Permission.ADMIN_READ,
+		        Permission.ADMIN_UPDATE,
+		        Permission.ADMIN_DELETE,
+		        Permission.ADMIN_CREATE,
+		        Permission.USER_READ,
+		        Permission.USER_UPDATE
+		    ));
 
   @Getter
   private final Set<Permission> permissions;
